<resources>
    <string name="app_name">Bhim Club</string>
    <string name="app_subject">Bhim Club is a Largest International Networking App among Dalit professionals. It allows only selected profiles like Beaurocrats, Entrepreneurs and Professionals. Our ultimate aim is to empower Dalit community by connecting potential Profiles each other.</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_repassword">Repeat Password</string>
    <string name="prompt_name">Full Name</string>
    <string name="prompt_phoneno">Phone Number</string>
    <string name="action_sign_in">Sign in </string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up">sign up</string>
    <string name="action_sign_up_short">Create new user here</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_incorrect_repassword">Passwords do not match.</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="inbox">Inbox</string>
    <string name="profile_details">Profile Details</string>
    <string name="change_password">Change Password</string>
    <string name="notification">Notification</string>
    <string name="requests">Requests</string>
    <string name="blocking">Blocking</string>
    <string name="deactivate_account">Deactivate Account</string>
    <string name="invite_friend">Invite Friends</string>
    <string name="my_connection">My Connection</string>


    <string name="full_name">Full Name</string>
    <string name="designation">Designation</string>
    <string name="department">Department</string>
    <string name="mobile">Mobile</string>
    <string name="chat">Chat</string>

    <string name="toolbar_title">Contacts</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Type name…</string>
    <string name="beaurocrats">Beaurocrats</string>
    <string name="professionals">Professionals</string>
    <string name="entrepreneur">Entrepreneur</string>
    <string name="jobSeeker">JobSeekers</string>
    <string name="view_all">View All</string>
    <string name="title_activity_change_password">ChangePassword</string>
    <string-array name="select_user_type">
        <item>Select user type</item>
        <item>Beaurocrats</item>
        <item>Professionals</item>
        <item>Entrepreneur</item>
        <item>Job seekers</item>
    </string-array>

    <style name="AppDialogTheme" parent="Theme.AppCompat.Light.Dialog.Alert">
        <item name="colorPrimary">@color/colorPrimary</item>
        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
        <item name="colorAccent">@color/colorAccent</item>
        <item name="android:editTextColor">@color/gray</item>
        <item name="android:textColorPrimary">@color/black</item>
        <item name="android:textColorSecondary">@color/black</item>
        <item name="windowActionBar">false</item>
        <item name="windowNoTitle">true</item>
    </style>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="status_fragment">Status</string>
    <string name="info_fragment">Info</string>
    <string name="requests_fragment">Requests</string>
    <string name="connections_fragment">Connections</string>

    <string name="info_frag_overview">Overview</string>
    <string name="info_frag_Designation">Designation</string>
    <string name="info_department">Department</string>
    <string name="info_employee_type">Employee Type</string>
    <string name="info_frag_Location">Location</string>


    <string name="lbl_set_profile_photo">Set profile image</string>
    <string name="lbl_take_camera_picture">Take a picture</string>
    <string name="lbl_choose_from_gallery">Choose from gallery</string>
    <string name="toast_image_intent_null">Image picker option is missing!</string>
    <string name="dialog_permission_title">Grant Permissions</string>
    <string name="dialog_permission_message">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="go_to_settings">GOTO SETTINGS</string>

</resources>
