<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile_details"
            android:icon="@drawable/ic_account_circle_black_24dp"
            android:title="@string/profile_details" />
        <item
            android:id="@+id/nav_change_password"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/change_password" />
        <item
            android:id="@+id/nav_notification"
            android:icon="@drawable/ic_notification"
            android:title="@string/notification" />
        <item
            android:id="@+id/nav_requests"
            android:icon="@drawable/ic_requestes"
            android:title="@string/requests" />
        <item
            android:id="@+id/nav_blocking"
            android:icon="@drawable/ic_blocking"
            android:title="@string/blocking" />
        <item
            android:id="@+id/nav_deactivate_account"
            android:icon="@drawable/ic_sync_disabled"
            android:title="@string/deactivate_account" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_invite"
                android:icon="@drawable/ic_invite_friends"
                android:title="@string/invite_friend" />
            <item
                android:id="@+id/nav_my_connection"
                android:icon="@drawable/ic_myconnection"
                android:title="@string/my_connection" />
            <!--<item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />-->
        </menu>
    </item>

</menu>
