<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <android.support.design.widget.AppBarLayout
        android:id="@+id/actionbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/actionbar_background"
            app:popupTheme="@style/AppTheme.PopupOverlay" >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_activity_myConnections"
                android:textAppearance="@style/AppTheme.Text"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_below="@+id/actionbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">


        <LinearLayout
            android:id="@+id/view_group_one"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical">
            <LinearLayout

                android:id="@+id/llBeaurocrats"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:background="@drawable/actionbar_background"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/beaurocrats"
                    android:gravity="center"
                    android:drawableTop="@drawable/beaurocratspng"
                    android:textColor="@color/white"/>


            </LinearLayout>
            <LinearLayout
                android:id="@+id/llEnterpreneur"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:background="@drawable/side_nav_bar"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/entrepreneur"
                    android:gravity="center"
                    android:drawableTop="@drawable/enterpreneur"
                    android:textColor="@color/white"/>




            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/view_group_sec"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@color/skyBlue"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/llProfessor"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:background="@drawable/side_nav_bar"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/professionals"
                    android:gravity="center"
                    android:drawableTop="@drawable/professionals"
                    android:textColor="@color/white"/>


            </LinearLayout>
            <LinearLayout
                android:id="@+id/lljobseeker"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:background="@drawable/actionbar_background"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/jobSeeker"
                    android:gravity="center"
                    android:drawableTop="@drawable/jobseeker"
                    android:textColor="@color/white"/>


            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
