<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="wrap_content"
app:layout_behavior="@string/appbar_scrolling_view_behavior"
tools:context=".activity.InviteFriendsActivity"
tools:showIn="@layout/activity_invite_friends">
    <ProgressBar
        android:id="@+id/loding_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/root_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <android.support.v7.widget.CardView
                android:id="@+id/card_view_first"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardBackgroundColor="@color/white"
                card_view:cardCornerRadius="10dp"
                card_view:cardElevation="5dp"
                card_view:cardUseCompatPadding="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:tag="image_tag"
                        android:layout_width="52dp"
                        android:layout_height="52dp"
                        android:layout_margin="5dp"
                        android:layout_gravity="center"
                        android:src="@drawable/contact_icon_profile"/>

                        <TextView
                            android:id="@+id/tv_type_bea"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:gravity="center"
                            android:text="@string/beaurocrats"
                            android:textAppearance="@style/AppTheme.Text"
                            android:background="@color/colorPrimaryDark"
                            android:padding="12dp"
                            android:textColor="@color/white" />
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:layout_centerVertical="true"
                            android:layout_alignParentRight="true"
                            android:rotation="270"
                            android:layout_marginRight="15dp"
                            android:tint="@color/gray"
                            android:src="@android:drawable/ic_menu_more"/>

                </RelativeLayout>

            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:id="@+id/card_view_sec"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardBackgroundColor="@color/white"
                card_view:cardCornerRadius="10dp"
                card_view:cardElevation="5dp"
                card_view:cardUseCompatPadding="true">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:tag="image_tag"
                        android:layout_width="52dp"
                        android:layout_height="52dp"
                        android:layout_margin="5dp"
                        android:layout_gravity="center"
                        android:src="@drawable/contact_icon_profile"/>

                    <TextView
                        android:id="@+id/tv_type_pro"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:gravity="center"
                        android:text="@string/professionals"
                        android:background="@color/skyBlue"
                        android:padding="12dp"
                        android:textAppearance="@style/AppTheme.Text"
                        android:textColor="@color/white" />
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:layout_centerVertical="true"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="15dp"
                        android:rotation="270"
                        android:tint="@color/gray"
                        android:src="@android:drawable/ic_menu_more"/>

                </RelativeLayout>

            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:id="@+id/card_view_third"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardBackgroundColor="@color/white"
                card_view:cardCornerRadius="10dp"
                card_view:cardElevation="5dp"
                card_view:cardUseCompatPadding="true">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:tag="image_tag"
                        android:layout_width="52dp"
                        android:layout_height="52dp"
                        android:layout_margin="5dp"
                        android:layout_gravity="center"
                        android:src="@drawable/contact_icon_profile"/>

                    <TextView
                        android:id="@+id/tv_typetext"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_marginLeft="30dp"
                        android:textAppearance="@style/AppTheme.Text"
                        android:background="@color/green_light"
                        android:padding="12dp"
                        android:text="@string/entrepreneur"
                        android:textColor="@color/white" />
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:rotation="270"
                        android:layout_alignParentRight="true"
                        android:tint="@color/gray"
                        android:layout_marginRight="15dp"
                        android:src="@android:drawable/ic_menu_more"/>

                </RelativeLayout>


            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>